# slapdash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dashboard.xsd  slapdash.db  slapdash.json  slapdash.old.json  slapdash.schema.json  slapdash.xml  slapdash.xsd
.cargo/: config.toml
.sqlx/: query-31ba08d63d0e99929734be627335e19c962fb562797b6d046ddeee5a83c2123d.json  query-86e7b9af925379fa60bdbb9e473d1469cb4e560e2c33c7b758a607a30328b09d.json  query-8f5f8bd1061131d76236dcf32b42e131fd7ad023ba2cc152f52748e5b321cf42.json  query-9ac85eec40f181cfdaef2cd9708f4da9686c9da7d04fc998ab87490e3e36d33c.json  query-b608da32ef249ecc14e15ae29f1ea8b854a0cd3e27c469fbcac39e54d65358b7.json  query-d213acfe3cd0a522c0698df95f520ee486a0f6447c3c0ce12af25594f7d0bd2d.json  query-d5517c06f021cb7d5cf3340755ac86fa6e473db16b8da472efe203abf9962589.json
migrations/: 20240910080552_initial_tables.sql  20250630081034_index_on_time.sql  20260428120000_index_point_series_time.sql
src/: cli.rs  config.rs  controller.rs  db.rs  env.rs  main.rs  model.rs  server.rs  view.rs
templates/: main.html  widget.html  widget_freshness.html  widget_gague.html  widget_gauge.html  widget_label.html  widget_line.html  widget_range.html  widget_value.html
