[package]
name = "slapdash"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-4.0"
description = "A simple dashboard server"
authors = ["Felix Watts <felixwatts@gmail.com>"]
repository = "https://github.com/felixwatts/slapdash"
documentation = "https://github.com/felixwatts/slapdash/blob/main/README.md"
homepage = "https://github.com/felixwatts/slapdash"
readme = "README.md"
categories = ["web", "dashboard"]
keywords = ["dashboard", "server", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "time", "sqlite", "chrono" ] }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.2.27", features = ["serde"] }
dotenv = "0.15.0"
serde_json = "1.0.128"
askama = "0.12.1"
askama_tide = "0.15.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.98"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1.11.1"
serde_ini = "0.2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
