[package]
name = "slapdash"
version = "0.1.6"
edition = "2021"
license = "CC-BY-NC-4.0"
description = "A simple dashboard server"
authors = ["Felix Watts <felixwatts@gmail.com>"]
repository = "https://github.com/felixwatts/slapdash"
documentation = "https://github.com/felixwatts/slapdash/blob/main/README.md"
homepage = "https://github.com/felixwatts/slapdash"
readme = "README.md"
categories = ["command-line-utilities", "gui", "visualization"]
keywords = ["dashboard", "server", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "time", "sqlite", "chrono" ] }
serde = { version = "1.0.228", features = ["derive"] }
askama = "0.15.6"
quick-xml = { version = "0.39.2", features = ["serialize"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
rand = { version = "0.10.1" }
regex = "1.12.3"
serde_ini = "0.2.0"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
notify = "8.2.0"
rand_distr = "0.6.0"
